Add URL param ?load=true to control auto-loading
- Annotator starts empty by default (for /plot annotate)
- With ?load=true, auto-loads current.png (for /plot load)

--- a/annotate.html
+++ b/annotate.html
@@ -445,8 +445,11 @@
                 });
             });
 
-            // Try to load current.png on startup
-            tryLoadCurrentPlot();
+            // Auto-load only if ?load=true in URL (set by /plot load command)
+            const urlParams = new URLSearchParams(window.location.search);
+            if (urlParams.get('load') === 'true') {
+                tryLoadCurrentPlot();
+            }
         }
 
         // Tool functions
