--- a/annotate.html
+++ b/annotate.html
@@ -164,6 +164,7 @@
             <label>Fichier</label>
             <button onclick="loadImage()">📂 Ouvrir</button>
             <button onclick="loadCurrentPlot()">🔄 current.png</button>
+            <button onclick="refreshCurrentPlot()" title="Recharger l'image (après modification)">🔃 Actualiser</button>
             <button class="primary" onclick="saveAnnotations()">💾 Sauvegarder</button>
         </div>
         <div class="toolbar-group">
@@ -864,6 +865,24 @@ Le serveur doit tourner sur http://localhost:8888`;
                 } catch (e) {
                     // Try next path
                 }
+            }
+        }
+
+        async function refreshCurrentPlot() {
+            // Reload current.png with cache busting
+            const cacheBuster = '?t=' + Date.now();
+            try {
+                const response = await fetch('/current.png' + cacheBuster);
+                if (response.ok) {
+                    const blob = await response.blob();
+                    const dataUrl = await blobToDataURL(blob);
+                    setBackgroundImage(dataUrl, 'current.png');
+                    console.log('✅ Image actualisée');
+                } else {
+                    alert('Impossible de recharger current.png');
+                }
+            } catch (e) {
+                alert('Erreur: ' + e.message);
             }
         }
 
