Make refresh button smaller (icon only)

--- a/annotate.html
+++ b/annotate.html
@@ -164,7 +164,7 @@
             <label>Fichier</label>
             <button onclick="loadImage()">📂 Ouvrir</button>
             <button onclick="loadCurrentPlot()">🔄 current.png</button>
-            <button onclick="refreshCurrentPlot()" title="Recharger l'image (après modification)">🔃 Actualiser</button>
+            <button onclick="refreshCurrentPlot()" title="Recharger l'image (après modification)" style="padding: 4px 8px; min-width: auto;">🔃</button>
             <button class="primary" onclick="saveAnnotations()">💾 Sauvegarder</button>
         </div>
         <div class="toolbar-group">
